--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Hattie's Homepage
 subtitle: "welcome to my site"
-title_separator: "-"
+title_separator: "|"
 description: >- # this means to ignore newlines until "baseurl:"
   My personal blogs to share my thoughts and ideas.
 minimal_mistakes_skin: default
@@ -96,12 +96,16 @@ defaults:
       layout: single
       author_profile: true
       comments: true
+      read_time: false
       share: true
-      related: true
+      related: false
       toc: true
-      toc_label: "My Table of Contents"
-      toc_icon: "cog"
+      toc_label: "On this page"
+      toc_icon: "file-alt"
       toc_sticky: true
+      sidebar:
+        nav: "navs"
+    
   # _pages
   - scope:
       path: "_pages"
