--- a/_config.yml
+++ b/_config.yml
@@ -112,7 +112,7 @@ defaults:
       type: pages
     values:
       layout: single
-      author_profile: true
+      author_profile: false
 
 category_archive:
   type: liquid
