--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ defaults:
       sidebar:
         nav: "navs"
       header:
-        overlay_image: /assets/images/c.jpg
+        overlay_image: /assets/images/d.jpg
     
   # _pages
   - scope:
