--- a/_config.yml
+++ b/_config.yml
@@ -65,24 +65,22 @@ author:
     - label: "Website"
       icon: "fas fa-fw fa-link"
       url: "https://lebaohantran.github.io"
-    - label: "LinkdIn"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
     - label: "Email"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/"
 
 footer:
   links:
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
+    - label: "Website"
+      icon: "fas fa-fw fa-link"
+      url: "https://lebaohantran.github.io"
+    - label: "Email"
+      icon: "fab fa-fw fa-github"
+      url: "https://github.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+
 
 defaults:
   # _posts
