--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "Han Tran (Hattie)"
+  name   : "Hattie"
   avatar : "/assets/images/bio-photo.png"
   bio    : "❤️ I am a teacher ✝️"
   links:
@@ -66,8 +66,8 @@ author:
       icon: "fas fa-fw fa-link"
       url: "https://lebaohantran.github.io"
     - label: "Email"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
+      icon: "fab fa-fw fa-envelope"
+      url: "tranlebaohan610@gmail.com"
 
 footer:
   links:
@@ -75,11 +75,11 @@ footer:
       icon: "fas fa-fw fa-link"
       url: "https://lebaohantran.github.io"
     - label: "Email"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
+      icon: "fab fa-fw fa-envelope"
+      url: "tranlebaohan610@gmail.com"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
+      url: "https://github.com/lebaohantran"
 
 
 defaults:
