--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ author:
       icon: "fas fa-fw fa-link"
       url: "https://lebaohantran.github.io"
     - label: "Email"
-      icon: "fab fa-fw fa-envelope"
+      icon: "fas fa-fw fa-envelope"
       url: "tranlebaohan610@gmail.com"
 
 footer:
@@ -75,7 +75,7 @@ footer:
       icon: "fas fa-fw fa-link"
       url: "https://lebaohantran.github.io"
     - label: "Email"
-      icon: "fab fa-fw fa-envelope"
+      icon: "fas fa-fw fa-envelope"
       url: "tranlebaohan610@gmail.com"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
